--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
                     </div>
                     <div class = "page5-right-section">
                         <div class="image-stack__item image-stack__item--document">
-                            <img src="/work_img/page5_document.jpg"/>
+                            <img src="./work_img/page5_document.jpg"/>
                         </div>
                         <div class="image-stack__item image-stack__item--girl">
-                            <img src="/work_img/page5_china_girl.png"/>
+                            <img src="./work_img/page5_china_girl.png"/>
                         </div>
                     </div>
                 </div>
@@ -271,10 +271,10 @@
                 <div class="page6-container _container">
                     <div class = "page6-left-section">
                         <div class="image-stack__item image-stack__item--grandmother">
-                            <img src="/work_img/page6_grandmother.png"/>
+                            <img src="./work_img/page6_grandmother.png"/>
                         </div>
                         <div class="image-stack__item image-stack__item--pills">
-                            <img src="/work_img/page6_pills.png"/>
+                            <img src="./work_img/page6_pills.png"/>
                         </div>
                     </div>
                     <div class = "page6-right-section">
