--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     </div>
                                  </div>
                                 <div class="card-middle__middle">
-                                    <img src="/work_img/page2_pain.jpg"/>
+                                    <img src="./work_img/page2_pain.jpg"/>
                                 </div>
                                 <div>
                                     <img class="middle-arrow-right" src="work_img/arrow.png"/>
@@ -474,10 +474,12 @@
         </main>
         <footer class="footer">
             <div class="footer-container">
-                <div>HKD OPEN SHOP - Mua Sắm Chuyên Nghiệp - Gía Rẻ Trao Tay
-                    Liên hệ 09093086931</div>
-                <div>ĐC: 53 Đường số 6 kdc Gia Hòa, xã Phong Phú, Bình Chánh, Tp. HCM</div>
-                <div>openmartvn@gmail.com</div>
+                <ul class="footer-list-elements">
+                    <li>HKD OPEN SHOP - Mua Sắm Chuyên Nghiệp - Gía Rẻ Trao Tay
+                        Liên hệ 09093086931</li>
+                    <li>ĐC: 53 Đường số 6 kdc Gia Hòa, xã Phong Phú, Bình Chánh, Tp. HCM</li>
+                    <li>openmartvn@gmail.com</li>
+                </ul>
             </div>
         </footer>
     </div> 
